データの保存先をDBに変更

--- a/views/create_memo.erb
+++ b/views/create_memo.erb
@@ -11,10 +11,10 @@
   <h1>メモアプリ</h1>
   <form method="POST" action="/memos">
     <div>
-      <input type="text" name="title">
+      <input type="text" name="title" required>
     </div>
     <div>
-      <textarea name="content" cols="30" rows="10"></textarea>
+      <textarea name="content" cols="30" rows="10" required></textarea>
     </div>
     <div>
       <input type="submit" value="保存">
