--- a/views/index.erb
+++ b/views/index.erb
@@ -13,8 +13,8 @@
     <input type="submit" value="追加">
   </form>
   <ul>
-    <% @memos_hash.each_with_index do |n,idx| %>
-      <li><a href="/memos/<%= n[0] %>"><%= h n[1]['title']%></a></li>
+    <% @memos_hash.each do |n| %>
+      <li><a href="/memos/<%= n['memo_id'] %>"><%= h n['title']%></a></li>
     <%end%>
   </ul>
 </body>
